Ticket #14897 (closed build error: fixed)

Opened 6 months ago

Last modified 6 months ago

MinGW Build Error in Windows 7 32-bit in Tiff code on trunk 73167

Reported by: stahta01 Owned by:
Priority: normal Milestone:
Component: wxMSW Version: 2.9-svn
Keywords: Cc:
Blocked By: Patch: no
Blocking:

Description

../../src/tiff/libtiff/tiff.h:111:2: error: unknown type name 'uint64'

I found a way to get by this error; not sure it is the most correct solution.

Tim S.

Index: src/tiff/libtiff/tiffconf.h
===================================================================
--- src/tiff/libtiff/tiffconf.h (revision 73167)
+++ src/tiff/libtiff/tiffconf.h (working copy)
@@ -7,6 +7,10 @@

#ifndef _TIFFCONF_
#define _TIFFCONF_


+#ifdef MINGW32
+#include <basetyps.h>
+#endif
+

/* Define to 1 if the system has the type `int16'. */
/* #undef HAVE_INT16 */


Attachments

wxWidgets-trunk-mono-SJLJ.patch download (398 bytes) - added by stahta01 6 months ago.
Possible patch

Change History

Changed 6 months ago by stahta01

Possible patch

Changed 6 months ago by VZ

  • status changed from new to closed
  • resolution set to fixed

(In [73190]) Fix libtiff compilation with MinGW.

At least some versions of MinGW don't define 64 bit integer types resulting in
errors when they're used in libtiff code, so explicitly include basetyps.h to
make sure these types are defined.

Closes #14897.

Note: See TracTickets for help on using tickets.