Fix libtiff compilation with MinGW.

At least some versions of MinGW don't define 64 bit integer types resulting in
errors when they're used in libtiff code, so explicitly include basetyps.h to
make sure these types are defined.

Closes #14897.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@73190 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775